unpackaged/main/default/objects/AcctSeedERP__Shipment_Line__c/fields/AcctSeedERP__Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Product__c</fullName>
    <formula>AcctSeedERP__Sales_Order_Line__r.AcctSeedERP__Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>