unpackaged/main/default/objects/AcctSeedERP__Shipment_Line__c/fields/AcctSeedERP__Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>