unpackaged/main/default/objects/AcctSeedERP__Shipment_Line__c/fields/AcctSeedERP__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Sales_Order__c</fullName>
    <formula>AcctSeedERP__Shipment__r.AcctSeedERP__Sales_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order</label>
    <type>Text</type>
</CustomField>