unpackaged/main/default/objects/AcctSeedERP__Shipment_Line__c/fields/AcctSeedERP__Serialized__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Serialized__c</fullName>
    <formula>IF(AcctSeedERP__Sales_Order_Line__r.AcctSeedERP__Product__r.AcctSeedERP__Serialized__c =True,"Yes","No")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serialized</label>
    <type>Text</type>
</CustomField>