unpackaged/main/default/objects/AcctSeedERP__Shipment_Line__c/fields/AcctSeedERP__Shipment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>AcctSeedERP__Shipment__c</referenceTo>
    <relationshipLabel>Shipment Lines</relationshipLabel>
    <relationshipName>Shipment_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>